adna/modules/player.css
/*------Player------*/

#zen-media-controls-toolbar {
  border: none !important;
  background: transparent !important;

  toolbaritem {
    padding: 7px !important;
    border-radius: 22px !important;
    background: var(--adna-bg) !important;
    backdrop-filter: blur(12px) !important;
    box-shadow:
      4px 4px 8px var(--adna-shadow-dark),
      -4px -4px 8px var(--adna-shadow-light) !important;
    margin-bottom: 3px !important;
    transition: all 0.3s ease-out !important;

    &:hover {
      background: var(--adna-bg-hover) !important;
    }
  }

  toolbarseparator {
    display: none !important;
  }

  > * {
    border: none !important;
    border-left: none !important;
    border-right: none !important;
  }
}

#zen-media-playback-buttons {
  display: flex !important;
  gap: 1px !important;
  width: fit-content !important;
  order: 3 !important;
  transform: scale(0.8) !important;
  transform-origin: center right !important;
}

#zen-media-mute-button {
  margin-right: auto !important;
  margin-left: -12px !important;
  transform: scale(0.9) !important;
  opacity: 0.6 !important;
  > image {
    scale: 0.8 !important;
  }
}

#zen-media-mute-button::before {
  content: var(--player-label, "Media") !important;
}

#zen-media-controls-toolbar[media-sharing] #zen-media-playback-buttons {
  display: none !important;
}

